--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "justlastprice": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
